add jvm args for application